# IDE

./: .gitignore  CMakeLists.TXT  CMakeLists.txt.TXT
cmake/: StandardSettings.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/buffer/: CMakeLists.txt  buffer.cpp  gapBuffer.cpp  gapBuffer.h  textBuffer.h  textSnapshot.h  undoStack.cpp  undoStack.h
src/git/: CMakeLists.txt  git_repo.cpp
src/pty/: CMakeLists.txt  pty.cpp
src/search/: CMakeLists.txt  DocumentSearcher.h  ripgrep_runner.cpp
src/ui/: CMakeLists.txt  editorwidget.cpp  editorwidget.h  mainwindow.cpp  mainwindow.h  searchbar.cpp  searchbar.h
src/util/: CMakeLists.txt  util.cpp
